--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ body {
     -webkit-text-size-adjust: none;
 }
 
-.box {
+.box1 {
     width: 371px;
     height: 305px;
     background-color: dodgerblue;
@@ -154,11 +154,21 @@ body {
 
 }
 
+.box2 {
+    width: 371px;
+    height: 1200px;
+    background-color: rgb(254, 254, 254);
+    padding: 30px;
+    margin: 31px auto;
+    text-align: center;
+    box-shadow: 1px 1px 5px 1px;
+}
+
 img {
     width: 268px;
     height: 117px;
 }
 
-p {
-    font-family: 'fa-solid-900';
+video {
+    border-radius: 2%;
 }
