--- a/css/style.css
+++ b/css/style.css
@@ -155,9 +155,13 @@ body {
 
 }
 
+section {
+    margin-top: 50px;
+}
+
 main {
     width: 371px;
-    height: 1510px;
+    height: 1840px;
     background-color: rgb(254, 254, 254);
     padding: 30px;
     margin: 5px auto;
@@ -178,14 +182,78 @@ nav {
 }
 
 aside {
-    justify-items: left;
+    text-align: left;
 }
+
+h5 {
+    font-size: 19px;
+
+}
+
+strong {
+    font-weight: bold;
+    color: #e935ad;
+}
+
+h3 {
+    text-align: center;
+    font-weight: bold;
+    margin-top: 1em;
+}
+
+table {
+    margin-bottom: 2em;
+}
+
+thead tr {
+    background-color: blue;
+    color: white;
+}
+
+th,
+td {
+    padding: 12px 15px;
+    vertical-align: bottom;
+    text-align: center;
+}
+
+tbody tr {
+    border-bottom: 1px solid white;
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: antiquewhite;
+}
+
+
 
 img {
     width: 268px;
     height: 117px;
 }
 
-.video {
-    border-radius: 50%;
+iframe {
+    border-radius: 20px;
+    width: 100%;
+    height: 200px;
+    margin-bottom: 2em;
+    margin-top: 2em;
+
+}
+
+h2 {
+    text-align: center;
+    font-weight: bold;
+}
+
+code {
+    background-color: gray;
+}
+
+footer div {
+    background-color: gray;
+    width: 432px;
+    height: 98px;
+    margin: auto;
+    border: 3px;
 }
