--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body {
 .box1 {
     width: 371px;
     height: 305px;
-    background-image: linear-gradient(to top right, #FFFFFF 0%, #1815df 50%, #AACFEF 100%);
+    background-image: linear-gradient(to top right, #FFFFFF 0%, #05037b 50%, #AACFEF 100%);
     padding: 30px;
     margin: 12px auto;
     text-align: center;
